--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
 
     <string name="home_tab_index">首页</string>
     <string name="home_tab_circle">小圈</string>
+    <string name="home_tab_live">直播</string>
     <string name="home_tab_message">消息</string>
     <string name="home_tab_mine">我的</string>
     <string name="qr_code">二维码</string>
@@ -123,7 +124,7 @@
     <string name="sale_promotion">促销</string>
     <string name="input_tips"><![CDATA[<font color="#cc0000">%1$d</font>]]>/%2$d字</string>
 
-    <string name="home_search_hint">直播课/老师/机构</string>
+    <string name="home_search_hint">个人/机构/课</string>
     <string name="course_of_learn">我学的课</string>
     <string name="course_of_teach">我授的课</string>
     <string name="my_course">我的课</string>
@@ -305,4 +306,12 @@
     <!--whiteboard-->
     <string name="clear_all_doodle">清除全部</string>
     <string name="paint_size">粗细</string>
+    
+    <!-- live tab -->
+    <string name="lesson_of_choiceness">精选课</string>
+    <string name="brilliant_clazz">精彩小教室</string>
+    <string name="whole">全部</string>
+
+    <!-- home tab -->
+    <string name="maybe_interest">你可能感兴趣的人</string>
 </resources>
