新增社交相关页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -314,7 +314,16 @@
     <string name="post">发布</string>
     <string name="input_dyn_hint">分享你的新鲜事儿</string>
     <string name="publish">公开</string>
-    
+    <string name="who_can_see_me">谁能看见</string>
+    <string name="choice_contact">选择联系人</string>
+    <string name="move_contact">移动联系人</string>
+    <string name="cancel_fllow">取消关注</string>
+    <string name="create_new_group">添加分组</string>
+    <string name="group_name">组名称</string>
+    <string name="move_contact_to">移动联系人至</string>
+    <string name="group_count">(%1$d)</string>
+    <string name="group_select_count">(%1$d/%2$d)</string>
+
     <!-- live tab -->
     <string name="lesson_of_choiceness">精选课</string>
     <string name="brilliant_clazz">精彩小教室</string>
@@ -322,4 +331,5 @@
 
     <!-- home tab -->
     <string name="maybe_interest">你可能感兴趣的人</string>
+    <string name="title_activity_security_level">SecurityLevelActivity</string>
 </resources>
