--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -323,6 +323,8 @@
     <string name="move_contact_to">移动联系人至</string>
     <string name="group_count">(%1$d)</string>
     <string name="group_select_count">(%1$d/%2$d)</string>
+    <string name="post_dyn_ok">发布动态成功</string>
+    <string name="post_dyn_none">动态内容不能为空</string>
 
     <!-- live tab -->
     <string name="lesson_of_choiceness">精选课</string>
