--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -303,6 +303,9 @@
     <string name="raise_hands_stu">举手的学生</string>
     <string name="random_select_stu">随机选择</string>
     <string name="classroom_discussion">教室讨论</string>
+    <string name="invite_friend">邀请好友</string>
+    <string name="invite_selected_friends">已选择<![CDATA[<font color="#ff9833">%1$d</font>]]>人</string>
+
     <!--whiteboard-->
     <string name="clear_all_doodle">清除全部</string>
     <string name="paint_size">粗细</string>
