--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="load_failed_tip">数据加载失败</string>
     <string name="load_failed_tip_2">请确保您的手机已连网</string>
     <string name="mark">标记为已读</string>
+    <string name="back">返回</string>
 
     <string name="home_tab_index">首页</string>
     <string name="home_tab_circle">小圈</string>
@@ -305,7 +306,8 @@
     <string name="classroom_discussion">教室讨论</string>
     <string name="invite_friend">邀请好友</string>
     <string name="invite_selected_friends">已选择<![CDATA[<font color="#ff9833">%1$d</font>]]>人</string>
-
+    <string name="set_assistant">设为助教</string>
+    <string name="kick_out">踢出</string>
     <!--whiteboard-->
     <string name="clear_all_doodle">清除全部</string>
     <string name="paint_size">粗细</string>
