--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -349,4 +349,8 @@
     <string name="talk_about_your_comment">说说你的评论</string>
     <string name="comment_reply">回复&#160;%1$s:</string>
     <string name="comment_reply_title">回复&#160;%1$s:&#160;%2$s</string>
+    <string name="followed">已关注</string>
+    <string name="cancel_followed">已取消关注</string>
+    <string name="praise_summary">%1$d人觉得很赞</string>
+    <string name="comment_summary">%1$d条评论</string>
 </resources>
