#2-搜索-搜索结果超过3个人时，点击 查看更多人 按钮无响应

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,4 +376,7 @@
     <string name="comment">评论</string>
     <string name="dynamic_about_me">%1$d条与我相关</string>
     <string name="dynamic_update">%1$d条</string>
+    <string name="lesson">课</string>
+    <string name="personal">个人</string>
+    <string name="organization">机构</string>
 </resources>
