--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="search">搜索</string>
     <string name="save">保存</string>
     <string name="rotate">旋转</string>
+    <string name="submit">提交</string>
     <string name="phone_num">手机号</string>
     <string name="pwd">密码</string>
     <string name="reason">推迟原因</string>
@@ -49,7 +50,7 @@
     <string name="hour_ago">%1$d小时之前</string>
     <string name="rename">重命名</string>
     <string name="all">全部</string>
-    
+
 
     <string name="home_tab_index">首页</string>
     <string name="home_tab_circle">小圈</string>
@@ -382,4 +383,21 @@
     <string name="lesson">课</string>
     <string name="personal">个人</string>
     <string name="organization">机构</string>
+
+    <!-- certification -->
+    <string name="certification">实名认证</string>
+    <string name="name_certification">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
+    <string name="certification_number">身份证号</string>
+    <string name="submit_time">提交时间</string>
+    <string name="verify_time">审核时间</string>
+    <string name="modify_certification">修改认证资料</string>
+    <string name="certification_profit_tips">通过实名认证后，您可以开设收费直播课，开课可以免审核</string>
+    <string name="certification_name_tip">请输入真实姓名</string>
+    <string name="certification_number_tips">请保证证件信息与真实姓名一致</string>
+    <string name="certification_photo">手持身份证</string>
+    <string name="add_photo">添加照片</string>
+    <string name="certification_require">证件要求</string>
+    <string name="certification_require1">1.免冠，五官清晰可见；</string>
+    <string name="certification_require2">2.双手手持证件；</string>
+    <string name="certification_require3">3.证件全部信息清晰无遮挡；</string>
 </resources>
