--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -338,6 +338,9 @@
     <string name="cr_open_microphone">上课时若要开启语音请上插上耳机</string>
     <string name="exit_classroom">退出教室</string>
     <string name="exit_classroom_tips">退出教室后，将结束本次课程</string>
+    <string name="socket_connect">连接上教室</string>
+    <string name="socket_disconnect">已断开教室</string>
+    <string name="socket_error_connect">无法连接到教室，请检查你的网络</string>
     <!--whiteboard-->
     <string name="clear_all_doodle">清除全部</string>
     <string name="paint_size">粗细</string>
