--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -245,6 +245,7 @@
     <string name="course_state_end">已完课</string>
     <string name="course_state_cancel">已取消</string>
     <string name="enter_cls_stu_hint">刚进教室的同学</string>
+    <string name="room_mates">同学</string>
     <string name="schedule">课表</string>
     <string name="living_time">直播进行时</string>
     <string name="live_today">今日直播</string>
