修改发动态界面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -353,7 +353,8 @@
     <string name="post">发布</string>
     <string name="input_dyn_hint">分享你的新鲜事儿</string>
     <string name="publish">所有人可见</string>
-    <string name="who_can_see_me">谁能看见</string>
+    <string name="who_can_see_me">谁可以见</string>
+    <string name="remind_somebody">提醒谁看</string>
     <string name="choice_contact">选择联系人</string>
     <string name="move_contact">移动联系人</string>
     <string name="cancel_fllow">取消关注</string>
