--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -342,6 +342,7 @@
     <string name="socket_connect">连接上教室</string>
     <string name="socket_disconnect">已断开教室</string>
     <string name="socket_error_connect">无法连接到教室，请检查你的网络</string>
+    <string name="live_whiteboard">直播白板</string>
     <!--whiteboard-->
     <string name="clear_all_doodle">清除全部</string>
     <string name="paint_size">粗细</string>
