教室，白板同步(添加学生端逻辑)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -343,6 +343,7 @@
     <string name="socket_disconnect">已断开教室</string>
     <string name="socket_error_connect">无法连接到教室，请检查你的网络</string>
     <string name="live_whiteboard">直播白板</string>
+    <string name="wb_toolbar_unable_tips">只能在自己创建的白板上使用白板工具</string>
     <!--whiteboard-->
     <string name="clear_all_doodle">清除全部</string>
     <string name="paint_size">粗细</string>
