--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,11 +95,13 @@
     <string name="my_account">我的账户</string>
     <string name="recharge">充值</string>
     <string name="withdrawals">我要提现</string>
+    <string name="personal_home">个人主页</string>
     <string name="my_page">我的主页</string>
     <string name="my_course_mine_page">我的课</string>
-    <string name="my_course_schedule">我的课程</string>
-    <string name="my_enrollment">我的报名</string>
+    <string name="my_teaching">我的课程</string>
+    <string name="my_enrollment">我报的班</string>
     <string name="my_ask_questions">我的提问</string>
+    <string name="my_documents">资料库</string>
     <string name="my_collections">我的收藏</string>
     <string name="eval_management">评价管理</string>
     <string name="teach_ability">教学能力</string>
