--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,16 +105,22 @@
     <string name="my_collections">我的收藏</string>
     <string name="eval_management">评价管理</string>
     <string name="teach_ability">教学能力</string>
-    <string name="feedback_help">反馈与帮助</string>
     <string name="system_notify">系统通知</string>
     <string name="name_verify">实名认证</string>
     <string name="get_more_right">可享更多权益</string>
     <string name="settings">设置</string>
     <string name="recommend_to_friends">推荐给好友</string>
     <string name="my_profile_txt">为自己写一句个性签名，让别人更了解你</string>
+    <!--setting-->
+    <string name="mobile_network_watch_live">允许2G/3G/4G观看直播</string>
+    <string name="message_notify_set">消息提醒设置</string>
+    <string name="account_safe">账号安全</string>
+    <string name="clear_cache">清除缓存</string>
+    <string name="feedback_help">意见反馈</string>
+    <string name="about_us">关于我们</string>
 
     <!--my sub page-->
-    <string name="exit_login">退出当前账号</string>
+    <string name="exit_login">退出登录</string>
     <!--my profile-->
     <string name="my_profile">我的资料</string>
     <string name="edit_portrait">编辑头像</string>
