增加是否是我的资料库的判断和显示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="cls_moment">班级圈</string>
     <string name="into_cls">进入教室</string>
     <string name="data_bank">资料库</string>
+    <string name="data_bank_of_mine">我的资料库</string>
     <string name="more">更多</string>
     <string name="leave_lesson">退课</string>
     <string name="speaker">主讲：</string>
