--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -348,7 +348,8 @@
     <string name="class_document">班级资料库</string>
     <string name="class_chat_input">输入文字</string>
     <string name="cr_open_camera">是否默认开启摄像头</string>
-    <string name="cr_open_microphone">上课时若要开启语音请上插上耳机</string>
+    <string name="cr_open_microphone">是否默认开启麦克风</string>
+    <string name="cr_earphone_open_tips">上课时若要开启语音请上插上耳机</string>
     <string name="exit_classroom">退出教室</string>
     <string name="exit_classroom_tips">退出教室后，将结束本次课程</string>
     <string name="socket_connect">连接上教室</string>
