--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -396,7 +396,7 @@
     <!-- home tab -->
     <string name="maybe_interest">你可能感兴趣的人</string>
     <string name="detail">详情</string>
-    <string name="look_person_tip">他的个人资料，去认识一下</string>
+    <string name="look_person_tip">查看他的个人资料</string>
     <string name="my_lesson">我的课</string>
     <string name="person_lesson">Ta的课</string>
     <string name="person_comment">评价</string>
