--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -350,8 +350,10 @@
     <string name="cr_open_camera">是否默认开启摄像头</string>
     <string name="cr_open_microphone">是否默认开启麦克风</string>
     <string name="cr_earphone_open_tips">上课时若要开启语音请上插上耳机</string>
-    <string name="exit_classroom">退出教室</string>
-    <string name="exit_classroom_tips">退出教室后，将结束本次课程</string>
+    <string name="exit_classroom">确认退出教室吗？</string>
+    <string name="exit_classroom_tips">只要报了名的课程可以随时进入教室</string>
+    <string name="finish_classroom">确认下课吗？</string>
+    <string name="finish_classroom_tips">下课后，将结束本次课程</string>
     <string name="socket_connect">连接上教室</string>
     <string name="socket_disconnect">已断开教室</string>
     <string name="socket_error_connect">无法连接到教室，请检查你的网络</string>
