增加我的订单界面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="settings">设置</string>
     <string name="recommend_to_friends">推荐给好友</string>
     <string name="my_profile_txt">为自己写一句个性签名，让别人更了解你</string>
+    <string name="my_order">我的订单</string>
     <!--setting-->
     <string name="mobile_network_watch_live">允许2G/3G/4G观看直播</string>
     <string name="message_notify_set">消息提醒设置</string>
