--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -399,6 +399,7 @@
     <string name="message_error_tip">消息未发送成功，重新发送</string>
     <string name="send_again">重新发送</string>
     <string name="group_has_exist">组已存在</string>
+    <string name="closed_tips">只有相互关注的才可以被提醒哦～</string>
 
     <!-- live tab -->
     <string name="lesson_of_choiceness">精选课</string>
