--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -608,4 +608,5 @@
     <string name="group_notification">[群成员变动]</string>
     <string name="type_custom">[自定义消息]</string>
     <string name="pay_failed">支付失败</string>
+    <string name="cannt_move_class">不能移动班级</string>
 </resources>
