--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -372,6 +372,8 @@
     <string name="share_to_all">分享给所有人</string>
     <string name="confirm_share">确认分享</string>
     <string name="share_target_empty">联系人为空</string>
+    <string name="open_camera_tips">打开摄像头</string>
+    <string name="agree_open_camera">是否同意老师打开摄像头?</string>
     <!--whiteboard-->
     <string name="clear_all_doodle">清除全部</string>
     <string name="paint_size">粗细</string>
