科目选择，教学能力申请

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,8 +51,11 @@
     <string name="rename">重命名</string>
     <string name="all">全部</string>
     <string name="exit_tips">再按一次返回键退出小教室</string>
+
     <string name="select_for_you">您已择:</string>
     <string name="search_subject_tips">请输入您要找的学科类目</string>
+    <string name="subject_category_select">学科类目选择</string>
+    <string name="subject_not_select">至少选择一项</string>
 
     <string name="home_tab_index">首页</string>
     <string name="home_tab_circle">小圈</string>
