--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="search_subject_tips">请输入您要找的学科类目</string>
     <string name="subject_category_select">学科类目选择</string>
     <string name="subject_not_select">至少选择一项</string>
+    <string name="claim_succ">声明成功</string>
+    <string name="claim_fail">声明失败</string>
 
     <string name="home_tab_index">首页</string>
     <string name="home_tab_circle">小圈</string>
