--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -487,6 +487,14 @@
     <string name="download_ok">下载成功</string>
     <string name="download_error">下载失败</string>
     <string name="downloading">正在下载</string>
+    <string name="u_version">版本：%1$s</string>
+    <string name="upgrade_tips_title">更新说明:</string>
+    <string name="upgrade_nexttime">下次再说</string>
+    <string name="upgrade_now">立即更新</string>
+    <string name="upgrade_downloading">正在下载更新</string>
+    <string name="click_install">点击安装</string>
+    <string name="upgrade_error_reclick">更新失败，点击重试</string>
+
 
     <!-- im -->
     <string name="jmui_action_settings">Settings</string>
@@ -629,4 +637,9 @@
     <string name="type_custom">[自定义消息]</string>
     <string name="pay_failed">支付失败</string>
     <string name="cannt_move_class">不能移动班级</string>
+    <string name="title_activity_upgrade">UpgradeActivity</string>
+    <string name="upgrade_title">小教室升级</string>
+
+
+
 </resources>
