--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="hour_ago">%1$d小时之前</string>
     <string name="rename">重命名</string>
     <string name="all">全部</string>
+    <string name="add">添加</string>
     <string name="exit_tips">再按一次返回键退出小教室</string>
 
     <string name="select_for_you">您已择:</string>
