--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="unfold_view_all">展开查看全部</string>
     <string name="reload">重新加载</string>
     <string name="load_failed_tip">数据加载失败</string>
+    <string name="empty_activity_tip">您还没有动态～</string>
     <string name="load_failed_tip_2">请确保您的手机已连网</string>
     <string name="mark">标记为已读</string>
     <string name="back">返回</string>
