--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,6 +185,7 @@
 
     <!--lesson creation-->
     <string name="lesson_creation">我要开课</string>
+    <string name="lesson_creation_tips">目前在APP端只能开设单节直播课，如果要开设课程请登录到PC端操作</string>
     <string name="live_lesson">直播课</string>
     <string name="private_lesson">私密课</string>
     <string name="live_lesson_name">直播课名称</string>
