--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="mobile_network_forbid">停止使用</string>
     <string name="mobile_network_allow">继续使用</string>
 
-    <string name="select_for_you">您已择:</string>
+    <string name="select_for_you">您已选:</string>
     <string name="search_subject_tips">请输入您要找的学科类目</string>
     <string name="subject_category_select">学科类目选择</string>
     <string name="subject_not_select">至少选择一项</string>
