--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -397,6 +397,8 @@
     <string name="open_camera_tips">打开摄像头</string>
     <string name="agree_open_camera">是否同意老师打开摄像头?</string>
     <string name="video_loading">视频正在加载中...</string>
+    <string name="save_edit_video_succ">保存到资料库成功</string>
+    <string name="save_edit_video_fail">保存到资料库失败</string>
     <!--whiteboard-->
     <string name="clear_all_doodle">清除全部</string>
     <string name="paint_size">粗细</string>
