--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -484,6 +484,7 @@
     <string name="follow_somebody">关注%1$s</string>
     <string name="none_follow_tip">您只有关注了%1$s，才能给%2$s发消息哦~</string>
     <string name="follow_and_send_message">关注%1$s，发消息</string>
+    <string name="lesson_no_introduction">暂无简介</string>
 
     <!-- empty tips -->
     <string name="moment_data_empty">此人还没有动态</string>
