--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,7 +224,7 @@
     <string name="lesson_fail_reason">失败原因</string>
     <string name="optional_info">选填信息</string>
     <string name="optional_info_tips">封面、课程简介、老师结束等</string>
-    <string name="on_shelves">立即上架</string>
+    <string name="on_shelves">自动上架</string>
     <string name="live_lesson_name_hint">请输入%1$d&#8211;%2$d字</string>
     <string name="subject_category_hint">请选择学科类目</string>
     <string name="teach_form_hint">请选择教学模式</string>
@@ -232,7 +232,7 @@
     <string name="lesson_duration_conflict">您已经在该时间有教授的课，确定需要在该时间继续开课</string>
     <string name="other_settings">其他设置</string>
     <string name="on_shelves_tips">上架后，学生才可以报名</string>
-    <string name="publish_personal_page">发布到个人主页</string>
+    <string name="publish_personal_page">设为公开</string>
     <string name="publish_personal_page_tips">在个人主页中展示，才可以分享</string>
     <string name="publish_to_circle">发布到小圈</string>
     <string name="live_lesson_name_error">请输入%1$d&#8211;%2$d个字的课名称</string>
