--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="add">添加</string>
     <string name="next">下一步</string>
     <string name="remark">备注</string>
+    <string name="not_setting">未设置</string>
     <string name="exit_tips">再按一次返回键退出小教室</string>
     <string name="no_network">无法连接到网络，请确保您的网络已经打开!</string>
     <string name="mobile_network_title">你没有在WIFI环境下</string>
