1. 创建课程，文案有误

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,7 +196,7 @@
     <string name="lesson_duration">上课时长</string>
     <string name="lesson_fail_reason">失败原因</string>
     <string name="optional_info">选填信息</string>
-    <string name="optional_info_tips">封面、课程简介、老师结束等</string>
+    <string name="optional_info_tips">封面、课程简介、老师介绍等</string>
     <string name="on_shelves">立即上架</string>
     <string name="live_lesson_name_hint">请输入%1$d&#8211;%2$d字</string>
     <string name="subject_category_hint">请选择学科类目</string>
