--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="cls_pending_class_title">可以开始上课啦!</string>
     <string name="cls_pending_class_desc">点击上课按钮开始上课</string>
     <string name="cls_live_show">%1$s&#x0020;正在直播秀&#x0020;%2$s</string>
+    <string name="cls_distance_class">距离上课还有%1$s</string>
 
     <string name="select_for_you">您已选:</string>
     <string name="search_subject_tips">请输入您要找的学科类目</string>
